--- a/a2b.css
+++ b/a2b.css
@@ -1,5 +1,3 @@
-
-
 .logo{
   width: 100px;
   
@@ -29,7 +27,6 @@ nav {
 nav ul {
   list-style-type: none;
   margin: 30px;
-  margin-right: 0px;
   padding: 0;
   display: flex;
 }
@@ -49,11 +46,40 @@ nav li a:hover {
 }
 
 /* Responsive adjustments */
+
+
 @media (max-width: 768px) {
-  .logo {
-    width: 50px;
+  .scroll-nav {
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  
+  .scroll-nav ul {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  
+  .scroll-nav li {
+    padding: 0 10px;
   }
 
+  nav ul {
+  list-style-type: none;
+  margin: 30px;
+  margin-left: 0px;
+  padding: 0;
+  display: flex;
+}
+
+
+nav li {
+  margin-right: 1px;
+}
+
+.logo {
+    width: 70px;
+  }
+}
   /* header */
   .content{
       margin-top: 100px;
